Issue #1403 - Update sync your data step to more closely align with the specification.
Perhaps most importantly, this patch also updates the syncing indicator and switches
the configuration / turn on syncing buttons into links embedded in the instruction
text.

--- a/kitsune/sumo/static/sumo/scss/form-wizard-configure-step.styles.scss
+++ b/kitsune/sumo/static/sumo/scss/form-wizard-configure-step.styles.scss
@@ -18,8 +18,8 @@
 }
 
 .icon {
-  height: 16px;
-  width: 16px;
+  height: 24px;
+  width: 24px;
   margin-inline-end: 12px;
 }
 
@@ -27,27 +27,18 @@
   margin-inline-start: auto;
 }
 
-#sync-status {
-  font-size: 10px;
-  font-weight: 700;
-  color: var(--color-white);
-  border-radius: 34px;
-  padding: 4px 16px;
-  margin-inline-start: 12px;
-  text-transform: uppercase;
-  background-color: p.$color-red-60;
+h3 {
+  margin-block: 0;
 }
 
-#sync-status[sync-enabled] {
-  background-color: var(--color-green-07);
+#sync-status-container {
+  margin-block-end: 16px;
 }
 
 #buttons {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin-block-end: 0;
-  flex: 1;
-  justify-content: space-between;
 }
 
 #buttons > button {
@@ -61,7 +52,7 @@
 
 #next {
   align-self: end;
-  margin-block: 8px 16px;
+  margin-block: 0 16px;
 }
 
 #instructions {
@@ -69,6 +60,8 @@
   margin-block-end: 28px;
 }
 
+#sync-status-container[sync-enabled] > .not-syncing,
+#sync-status-container:not([sync-enabled]) > .syncing,
 #instructions[sync-enabled] > .not-syncing,
 #instructions:not([sync-enabled]) > .syncing {
   display: none;
